# integration

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  okteto.yml  pyproject.toml
.github/: close_pr.yml  open_pr.yml
.github/workflows/: cd.yml  ci.yml  close_pr.yml  open_pr.yml
fastapi-backend/: main.py
fastapi_backend/: database.py  database_test.py  main.py  main_test.py
k8s/: fastapi-back.yml  ingress.yml  k8s.yml  postgres-pv.yaml  postgres-pvc-pv.yaml  postgres.yml
