[tool.poetry]
name = "fastapi_backend"
version = "0.1.0"
description = ""
authors = ["Tomas Gruner <47506558+MegaRedHand@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg = {extras = ["binary"], version = "^3.1.8"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest-postgresql = "^4.1.1"
pytest = "^7.2.2"
mypy = "^1.1.1"
types-psycopg2 = "^2.9.21.9"
psycopg = {extras = ["binary"], version = "^3.1.8"}
flake8 = "^6.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
